--- a/bathrobe.html
+++ b/bathrobe.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
-  Kenno bathrobe — refined layout, elevated typography, and top-placed actions
+  Kenno bathrobe — refined layout, elevated typography, top-placed actions,
+  centered buttons, larger subheads, and scroll-linked CTA motion.
 -->
 <html lang="en">
 <head>
@@ -33,6 +34,7 @@
       --ink-900:#111; --ink-800:#1c1c1c; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
       --ui-050:#fcfcfc; --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
       --brand:#1d6fa7; --brand-100: rgba(29,111,167,.12);
+      --cta-shift: 0px; /* for scroll-linked motion */
     }
 
     html { scroll-behavior:smooth; }
@@ -101,12 +103,25 @@
     }
     .eyebrow{ margin:0 0 .65rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
 
-    /* TOP actions (moved above content) */
+    /* TOP actions (scroll-linked) */
     .actions-top{
       display:flex; gap:10px; flex-wrap:wrap; margin:0 0 14px;
+      transform: translateY(var(--cta-shift));
+      transition: transform 140ms ease;
     }
     .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
-    .actions-top .button{ padding:.6rem .9rem; }
+    .actions-top .button{
+      display:inline-flex !important;
+      align-items:center;
+      justify-content:center;
+      min-height:48px;
+      padding:0 18px;
+      line-height:1 !important;
+    }
+    .actions-top .button.icon:before{
+      margin-right:.5rem;
+      transform:none;
+    }
 
     .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.2rem 0 1rem; }
     .meta .chip{
@@ -124,11 +139,15 @@
       position:absolute; left:0; top:.63rem;
     }
 
-    /* Section titles inside copy */
+    /* Section titles inside copy (larger than body) */
     #product-copy h3{
-      margin:1.1rem 0 .35rem;
-      font-size:.95rem; letter-spacing:.16em; text-transform:uppercase;
-      color:var(--ink-700); font-variant-caps:all-small-caps;
+      margin:1.2rem 0 .55rem;
+      font-size:1.12rem;
+      font-weight:700;
+      letter-spacing:.14em;
+      text-transform:uppercase;
+      color:var(--ink-800);
+      font-variant-caps:all-small-caps;
     }
     #product-copy p + h3{ margin-top:1.25rem; }
 
@@ -161,38 +180,10 @@
       .details{ position:static; padding:20px 18px 22px; }
       .thumb{ width:66px; height:66px; }
       #main .inner{ padding-top:72px!important; }
+      :root { --cta-shift: 0px !important; } /* disable motion on small screens */
+      .details .button{ min-height:44px; padding:0 16px; }
+      #product-copy h3{ font-size:1.07rem; }
     }
-    /* === 1) Perfectly center the button text (and icon) === */
-.details .button {
-  display: inline-flex !important;
-  align-items: center;
-  justify-content: center;
-  min-height: 48px;
-  padding: 0 18px;
-  line-height: 1 !important;   /* kill tall baseline line-height */
-}
-.details .button.icon:before {
-  margin-right: .5rem;          /* tidy spacing between icon & label */
-  transform: none;              /* keep it vertically centered */
-}
-
-/* === 2) Make subheadings larger than body copy === */
-/* Replace your current `#product-copy h3` rule with this */
-#product-copy h3{
-  margin: 1.2rem 0 .55rem;
-  font-size: 1.12rem;           /* > body (≈1.0–1.02rem) */
-  font-weight: 700;
-  letter-spacing: .14em;
-  text-transform: uppercase;
-  color: var(--ink-800);
-  font-variant-caps: all-small-caps;
-}
-
-/* Optional: slightly tighten on small screens */
-@media (max-width: 480px){
-  .details .button{ min-height: 44px; padding: 0 16px; }
-  #product-copy h3{ font-size: 1.07rem; }
-}
   </style>
 </head>
 <body class="is-preload">
@@ -250,7 +241,7 @@
           <aside class="details" aria-live="polite">
             <div class="eyebrow" id="styleTitle">KENNO — DARK BLUE — VIEW 1</div>
 
-            <!-- TOP ACTIONS (moved here) -->
+            <!-- TOP ACTIONS -->
             <div class="actions-top">
               <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
@@ -266,7 +257,7 @@
               <span class="chip">Machine-wash 60&nbsp;°C</span>
             </div>
 
-            <!-- ==== Product copy (elevated + formal; facts unchanged) ==== -->
+            <!-- Product copy -->
             <article id="product-copy">
               <h3>Discover Unrivalled Comfort</h3>
               <p>The Kenno bathrobe refines everyday ease into a considered ritual. Chambray-trimmed edges and a coordinating belt frame a silhouette that feels composed yet effortless. Woven from recycled fibres, the surface reads lively and tactile—soft to the touch and quietly luxurious.</p>
@@ -490,6 +481,22 @@
       if(e.key==='ArrowUp'){ currentColorIndex=(currentColorIndex-1+PRODUCT.colors.length)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
       if(e.key==='ArrowDown'){ currentColorIndex=(currentColorIndex+1)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
     });
+
+    /* --- Scroll-linked shift for the Add to cart row --- */
+    (function(){
+      var root = document.documentElement;
+      var maxShift = 16;   // max downward shift in px
+      var range    = 120;  // scroll distance to reach max
+
+      function updateCTA(){
+        var y = window.scrollY || window.pageYOffset || 0;
+        var shift = Math.min(y, range) / range * maxShift;
+        root.style.setProperty('--cta-shift', shift.toFixed(2) + 'px');
+      }
+
+      updateCTA();
+      window.addEventListener('scroll', updateCTA, { passive: true });
+    })();
   </script>
 </body>
 </html>
