--- a/bathrobe.html
+++ b/bathrobe.html
@@ -2,7 +2,7 @@
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
   Kenno bathrobe — refined layout, elevated typography, top-placed actions,
-  centered buttons, larger subheads, and scroll-linked CTA motion (full drop).
+  centered buttons, larger subheads, CTA that scrolls to the bottom of the card.
 -->
 <html lang="en">
 <head>
@@ -103,24 +103,17 @@
     }
     .eyebrow{ margin:0 0 .65rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
 
-    /* TOP actions (scroll-linked) */
-    .actions-top{
-      display:flex; gap:10px; flex-wrap:wrap; margin:0 0 14px;
+    /* TOP actions */
+    .actions-top{ display:flex; gap:10px; flex-wrap:wrap; margin:0 0 14px; }
+    .button{ display:inline-flex; align-items:center; justify-content:center; min-height:48px; padding:0 18px; line-height:1 !important; }
+    .button.icon:before{ margin-right:.5rem; transform:none; }
+    .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
+
+    /* Only the primary CTA moves */
+    .cta-primary{
       transform: translateY(var(--cta-shift));
       transition: transform 140ms ease;
-    }
-    .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
-    .actions-top .button{
-      display:inline-flex !important;
-      align-items:center;
-      justify-content:center;
-      min-height:48px;
-      padding:0 18px;
-      line-height:1 !important;
-    }
-    .actions-top .button.icon:before{
-      margin-right:.5rem;
-      transform:none;
+      will-change: transform;
     }
 
     .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.2rem 0 1rem; }
@@ -181,7 +174,7 @@
       .thumb{ width:66px; height:66px; }
       #main .inner{ padding-top:72px!important; }
       :root { --cta-shift: 0px !important; } /* disable motion on small screens */
-      .details .button{ min-height:44px; padding:0 16px; }
+      .button{ min-height:44px; padding:0 16px; }
       #product-copy h3{ font-size:1.07rem; }
     }
   </style>
@@ -243,7 +236,8 @@
 
             <!-- TOP ACTIONS -->
             <div class="actions-top">
-              <a href="#select" class="button primary icon solid fa-check">Add to cart</a>
+              <!-- add cta-primary ONLY to the Add to cart button -->
+              <a href="#select" class="button primary icon solid fa-check cta-primary">Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
             </div>
 
@@ -482,20 +476,47 @@
       if(e.key==='ArrowDown'){ currentColorIndex=(currentColorIndex+1)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
     });
 
-    /* --- Scroll-linked shift for the Add to cart row (full drop) --- */
+    /* --- Scroll-linked shift for the Add to cart button (to bottom of details card) --- */
     (function(){
       var root = document.documentElement;
-      var maxShift = 48;   // total downward shift in px (full drop)
-      var range    = 48;   // scroll distance to reach max (1:1 feel)
+      var details = document.querySelector('.details');
+      var cta = document.querySelector('.cta-primary');
+      if(!details || !cta) return;
 
-      function updateCTA(){
-        var y = window.scrollY || window.pageYOffset || 0;
-        var shift = Math.min(y, range); // 1px scroll -> 1px shift, capped at maxShift
+      var startScrollY = 0;
+      var maxShift = 0;
+
+      function computeMaxShift(){
+        // Distance available inside the details card from CTA's current spot to its bottom padding
+        var styles = getComputedStyle(details);
+        var padBottom = parseFloat(styles.paddingBottom) || 0;
+
+        // offsetTop: CTA's top within the details card
+        var ctaTopInCard = cta.offsetTop;
+        var cardHeight   = details.clientHeight;
+        var ctaHeight    = cta.offsetHeight;
+
+        maxShift = Math.max(0, cardHeight - (ctaTopInCard + ctaHeight + padBottom));
+        startScrollY = window.scrollY || window.pageYOffset || 0;
+        // Reset shift after recompute
+        root.style.setProperty('--cta-shift', '0px');
+      }
+
+      function onScroll(){
+        var y = (window.scrollY || window.pageYOffset || 0) - startScrollY;
+        var shift = Math.min(Math.max(y,0), maxShift); // move 1:1, clamp to bottom of card
         root.style.setProperty('--cta-shift', shift.toFixed(2) + 'px');
       }
 
-      updateCTA();
-      window.addEventListener('scroll', updateCTA, { passive: true });
+      computeMaxShift();
+      onScroll();
+
+      window.addEventListener('scroll', onScroll, { passive:true });
+      window.addEventListener('resize', function(){ computeMaxShift(); onScroll(); });
+
+      // In case images change the card height after load
+      var ro = new ResizeObserver(function(){ computeMaxShift(); onScroll(); });
+      ro.observe(details);
     })();
   </script>
 </body>
