--- a/bathrobe.html
+++ b/bathrobe.html
@@ -2,7 +2,8 @@
 <!--
   Phantom by HTML5 UP (customized for ELIRA LIVING)
   Kenno bathrobe — refined layout, elevated typography, top-placed actions,
-  centered buttons, larger subheads, CTA that scrolls to the bottom of the card.
+  centered buttons, larger subheads, CTA that starts moving after a delay and
+  travels to the bottom of the details card.
 -->
 <html lang="en">
 <head>
@@ -25,7 +26,6 @@
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
   <style>
-    /* ===== Design tokens (local) ===== */
     :root{
       --page-gutter: 22px;
       --card-r: 16px;
@@ -34,13 +34,13 @@
       --ink-900:#111; --ink-800:#1c1c1c; --ink-700:#2a2a2a; --ink-600:#444; --ink-500:#666; --ink-400:#888;
       --ui-050:#fcfcfc; --ui-100:#fafafa; --ui-200:#f5f5f5; --ui-300:#eee; --ui-400:#e6e6e6;
       --brand:#1d6fa7; --brand-100: rgba(29,111,167,.12);
-      --cta-shift: 0px; /* updated by JS for scroll-linked CTA motion */
+      --cta-shift: 0px; /* updated by JS */
     }
 
     html { scroll-behavior:smooth; }
     @media (prefers-reduced-motion: reduce){ *{animation:none!important;transition:none!important} html{scroll-behavior:auto} }
 
-    /* ===== Header (pinned, black text) ===== */
+    /* Header */
     #header{ position:fixed; top:0; left:0; right:0; background:transparent; border:0; box-shadow:none; margin:0!important; z-index:60; pointer-events:none; }
     #header .inner{ padding-top:.5rem; padding-bottom:.25rem; pointer-events:auto; }
     #header .logo{ position:fixed; top:16px; left:22px; z-index:61; display:flex; align-items:center; gap:.55rem; }
@@ -50,41 +50,28 @@
     #header nav a{ color:var(--ink-900)!important; }
     #header.shrink .inner{ padding-top:.25rem; }
 
-    /* ===== Page rhythm ===== */
+    /* Page rhythm */
     #wrapper{ padding-top:0!important; }
     #main{ padding-top:0!important; }
     #main .inner{ padding-top:78px!important; }
 
-    /* ===== Product header ===== */
+    /* Product header */
     .product-header{ margin-top:6px; margin-bottom:18px; }
-    .product-header h1{
-      margin:0 0 .25rem;
-      font-weight:700;
-      letter-spacing:.02em;
-      color:var(--ink-900);
-      line-height:1.2;
-    }
-    .product-header p{
-      margin:0;
-      color:var(--ink-500);
-      font-size:1.02rem;
-      line-height:1.6;
-    }
+    .product-header h1{ margin:0 0 .25rem; font-weight:700; letter-spacing:.02em; color:var(--ink-900); line-height:1.2; }
+    .product-header p{ margin:0; color:var(--ink-500); font-size:1.02rem; line-height:1.6; }
 
-    /* ===== Grid layout (sticky details) ===== */
-    .product-layout{
-      display:grid; gap:36px; grid-template-columns: minmax(0,1.1fr) minmax(0,.9fr); align-items:start;
-    }
+    /* Grid */
+    .product-layout{ display:grid; gap:36px; grid-template-columns:minmax(0,1.1fr) minmax(0,.9fr); align-items:start; }
     @media (max-width:1100px){ .product-layout{ grid-template-columns:1fr; gap:22px; } }
 
-    /* ===== Image card ===== */
+    /* Image card */
     .main-image{ background:#fff; border-radius:var(--card-r); overflow:hidden; box-shadow:var(--shadow-1); }
-    .main-image .frame{ width:100%; aspect-ratio: 4/5; background:var(--ui-200); position:relative; }
+    .main-image .frame{ width:100%; aspect-ratio:4/5; background:var(--ui-200); position:relative; }
     .main-image img{ position:absolute; inset:0; width:100%; height:100%; object-fit:cover; opacity:0; transform:scale(1.015); transition:opacity 360ms ease, transform 520ms cubic-bezier(.2,.6,.2,1); background:#fff; }
     .main-image img.show{ opacity:1; transform:scale(1); }
     .main-image img.contain{ object-fit:contain; background:#fff; }
 
-    /* Thumbnails */
+    /* Thumbs */
     .thumbs{ margin-top:12px; display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
     .thumb{
       width:72px; height:72px; border:1px solid var(--ui-400); border-radius:12px; overflow:hidden; background:#fff;
@@ -95,71 +82,41 @@
     .thumb[aria-selected="true"]{ border-color:var(--brand); box-shadow:0 0 0 3px var(--brand-100); }
     .thumb img{ width:100%; height:100%; object-fit:cover; display:block; }
 
-    /* ===== Details card ===== */
-    .details{
-      position:sticky; top:88px;
-      background:#fff; border-radius:var(--card-r); padding:24px 24px 26px;
-      box-shadow:var(--shadow-1);
-    }
+    /* Details card */
+    .details{ position:sticky; top:88px; background:#fff; border-radius:var(--card-r); padding:24px 24px 26px; box-shadow:var(--shadow-1); }
     .eyebrow{ margin:0 0 .65rem; color:var(--ink-400); font-size:.9rem; letter-spacing:.16em; text-transform:uppercase; }
 
-    /* TOP actions */
+    /* Actions */
     .actions-top{ display:flex; gap:10px; flex-wrap:wrap; margin:0 0 14px; }
     .button{ display:inline-flex; align-items:center; justify-content:center; min-height:48px; padding:0 18px; line-height:1 !important; }
     .button.icon:before{ margin-right:.5rem; transform:none; }
     .actions-top .button.primary{ box-shadow:0 6px 16px rgba(29,111,167,.18); }
 
     /* Only the primary CTA moves */
-    .cta-primary{
-      transform: translateY(var(--cta-shift));
-      transition: transform 140ms ease;
-      will-change: transform;
-    }
+    .cta-primary{ transform: translateY(var(--cta-shift)); transition: transform 140ms ease; will-change: transform; }
 
     .meta{ display:flex; gap:10px; flex-wrap:wrap; color:var(--ink-600); margin:.2rem 0 1rem; }
-    .meta .chip{
-      background:#f6f9fc; padding:.28rem .55rem; border-radius:999px; font-size:.88rem; border:1px solid #e5eff8;
-      line-height:1.3; white-space:nowrap;
-    }
+    .meta .chip{ background:#f6f9fc; padding:.28rem .55rem; border-radius:999px; font-size:.88rem; border:1px solid #e5eff8; line-height:1.3; white-space:nowrap; }
 
     /* Editorial body */
     .details p, .details li{ color:var(--ink-600); line-height:1.75; hyphens:auto; }
     .details p{ margin:0 0 1rem; }
     .details ul{ margin:.35rem 0 1.1rem 0; padding-left:0; list-style:none; }
     .details ul li{ padding-left:1.1rem; position:relative; }
-    .details ul li::before{
-      content:""; width:7px; height:7px; border-radius:50%; background:var(--ink-400);
-      position:absolute; left:0; top:.63rem;
-    }
+    .details ul li::before{ content:""; width:7px; height:7px; border-radius:50%; background:var(--ink-400); position:absolute; left:0; top:.63rem; }
 
-    /* Section titles inside copy (larger than body) */
-    #product-copy h3{
-      margin:1.2rem 0 .55rem;
-      font-size:1.12rem;
-      font-weight:700;
-      letter-spacing:.14em;
-      text-transform:uppercase;
-      color:var(--ink-800);
-      font-variant-caps:all-small-caps;
-    }
+    /* Subheads larger than body */
+    #product-copy h3{ margin:1.2rem 0 .55rem; font-size:1.12rem; font-weight:700; letter-spacing:.14em; text-transform:uppercase; color:var(--ink-800); font-variant-caps:all-small-caps; }
     #product-copy p + h3{ margin-top:1.25rem; }
 
     /* Swatches */
     .color-picker{ display:flex; gap:12px; align-items:center; margin:.25rem 0 .8rem; flex-wrap:wrap; }
-    .swatch{
-      width:46px; height:28px; border-radius:999px; border:1px solid var(--ui-400); cursor:pointer; position:relative;
-      outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff;
-      box-shadow:inset 0 0 0 4px rgba(255,255,255,.8);
-      transition:border-color .2s ease, box-shadow .2s ease, transform .12s ease;
-    }
+    .swatch{ width:46px; height:28px; border-radius:999px; border:1px solid var(--ui-400); cursor:pointer; outline:none; display:inline-flex; align-items:center; justify-content:center; background:#fff; box-shadow:inset 0 0 0 4px rgba(255,255,255,.8); transition:border-color .2s ease, box-shadow .2s ease, transform .12s ease; }
     .swatch:hover{ transform:translateY(-1px); }
     .swatch[aria-checked="true"]{ box-shadow:0 0 0 3px var(--brand-100), inset 0 0 0 4px rgba(255,255,255,.8); border-color:var(--brand); }
-    .swatch .dot{
-      width:100%; height:100%; border-radius:999px; display:block;
-      background-position:center!important; background-repeat:repeat-x!important; background-size:10px 100%!important;
-    }
+    .swatch .dot{ width:100%; height:100%; border-radius:999px; display:block; background-position:center!important; background-repeat:repeat-x!important; background-size:10px 100%!important; }
 
-    /* Reveal animation hooks */
+    /* Reveal */
     .reveal{ opacity:0; transform:translateY(14px); transition:opacity 500ms ease, transform 500ms ease; }
     .reveal.appear{ opacity:1; transform:translateY(0); }
 
@@ -236,7 +193,6 @@
 
             <!-- TOP ACTIONS -->
             <div class="actions-top">
-              <!-- add cta-primary ONLY to the Add to cart button -->
               <a href="#select" class="button primary icon solid fa-check cta-primary">Add to cart</a>
               <a href="index.html#products" class="button">Back to Products</a>
             </div>
@@ -476,35 +432,37 @@
       if(e.key==='ArrowDown'){ currentColorIndex=(currentColorIndex+1)%PRODUCT.colors.length; currentImageIndex=0; updateGallery(); updateColorPickA11y(); }
     });
 
-    /* --- Scroll-linked shift for the Add to cart button (to bottom of details card) --- */
+    /* --- CTA motion: starts after a delay, then travels to the bottom of details card --- */
     (function(){
       var root = document.documentElement;
       var details = document.querySelector('.details');
       var cta = document.querySelector('.cta-primary');
       if(!details || !cta) return;
 
+      // Tweak this to match when you want the CTA to begin moving (px of scroll).
+      // 24 matches header "shrink" point. 96 feels like the logo’s gentle offset.
+      var delayBeforeMove = 96;
+
       var startScrollY = 0;
       var maxShift = 0;
 
       function computeMaxShift(){
-        // Distance available inside the details card from CTA's current spot to its bottom padding
         var styles = getComputedStyle(details);
         var padBottom = parseFloat(styles.paddingBottom) || 0;
 
-        // offsetTop: CTA's top within the details card
         var ctaTopInCard = cta.offsetTop;
         var cardHeight   = details.clientHeight;
         var ctaHeight    = cta.offsetHeight;
 
         maxShift = Math.max(0, cardHeight - (ctaTopInCard + ctaHeight + padBottom));
         startScrollY = window.scrollY || window.pageYOffset || 0;
-        // Reset shift after recompute
         root.style.setProperty('--cta-shift', '0px');
       }
 
       function onScroll(){
         var y = (window.scrollY || window.pageYOffset || 0) - startScrollY;
-        var shift = Math.min(Math.max(y,0), maxShift); // move 1:1, clamp to bottom of card
+        var afterDelay = y - delayBeforeMove;
+        var shift = Math.min(Math.max(afterDelay, 0), maxShift);
         root.style.setProperty('--cta-shift', shift.toFixed(2) + 'px');
       }
 
@@ -514,7 +472,6 @@
       window.addEventListener('scroll', onScroll, { passive:true });
       window.addEventListener('resize', function(){ computeMaxShift(); onScroll(); });
 
-      // In case images change the card height after load
       var ro = new ResizeObserver(function(){ computeMaxShift(); onScroll(); });
       ro.observe(details);
     })();
